--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <meta property="twitter:title" content="Cryptocurrency Chart" />
     <meta
       property="twitter:description"
-      content="Fawaz Haroun's personal blog'."
+      content="Chart showing historical data of cryptocurrencies, including Bitcoin, Ethereum, Litecoin, and Binance Coin."
     />
     <link
       rel="icon"
